--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,6 @@ jobs:
                         常微分方程/main.typ
                         抽象代数/main.typ
                         数学模型/main.typ
+          options: |
+                    --root
+                    .
