--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,22 @@
-name: Build Typst document
+name: Render paper.pdf
 on: push
-
 jobs:
-  build_typst_documents:
+  render-paper:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Typst
-        uses: lvignoli/typst-action@main
+      - uses: actions/checkout@v4
+      - uses: typst-community/setup-typst@v3
         with:
-          source_file: |
-                        代数学二/main.typ
+          cache-dependency-path: requirements.typ
+      # Now Typst is installed and packages will be cached!
+      - uses: actions/checkout@v2
+      - run: |
+              for file in 代数学二/main.typ
                         几何学/main.typ
                         复变函数/main.typ
                         常微分方程/main.typ
                         抽象代数/main.typ
                         数学模型/main.typ
-          options: |
-                    --root
-                    .
+                  do
+                         typst compile $file --root .
+                  done
