--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,12 @@ jobs:
       # Now Typst is installed and packages will be cached!
       - uses: actions/checkout@v2
       - run: |
-              for file in "代数学二/main.typ" "几何学/main.typ" "复变函数/main.typ" "常微分方程/main.typ" "抽象代数/main.typ" "数学模型/main.typ"
+              for path in "代数学二/main.typ" "几何学/main.typ" "复变函数/main.typ" "常微分方程/main.typ" "抽象代数/main.typ" "数学模型/main.typ"
                   do
                          typst compile $file --root .
                   done
+      - uses: actions/upload-artifact@v4
+        with:
+          name: 数学模型
+          path: 数学模型/main.pdf
+                  
