--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: fontist/setup-fontist@v2.0.1
+        with:
+          fontist-version: 1.x
       - run: fontist install "Noto Serif CJK SC"
 
-      - uses: typst-community/setup-typst@v3
+      - uses: typst-community/setup-typst@v4
 
       - run: |
           set -eux
