--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
         id: list
         run: |
           set -eux
-          apt-get update
-          apt-get install -y jq
+          sudo apt-get update
+          sudo apt-get install -y jq
           mapfile -t files < <(find . -type f -name 'main.typ' -not -path './.github/*' -print)
           if [ ${#files[@]} -eq 0 ]; then
             echo "files=[]" >> $GITHUB_OUTPUT
