--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,5 @@
     "cSpell.enableFiletypes": [
         "typst"
     ],
-    "tinymist.formatterMode": "typstfmt",
-    "tinymist.preview.refresh": "onSave",
+    "tinymist.formatterMode": "typstfmt"
 }
